--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,13 @@
 .red-box.cooler {
     font-size: 24px;
 }
+
+#big-blue {
+    color: #0000ff;
+    font-size: 36px;
+}
+
+#green-box {
+    background-color: #90ee90;
+    font-size: 24px;
+}
