--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -4,7 +4,7 @@
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
-.red-box.cooler {
+.cooler {
     font-size: 24px;
 }
 
@@ -16,4 +16,5 @@
 #green-box {
     background-color: #90ee90;
     font-size: 24px;
+    font-weight: bold;
 }
