--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px 10px 20px;
 }
 
 .logo {
@@ -9,11 +13,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-self: center;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+  display: flex;
+  gap: 10px;
 }
 
 a {
@@ -23,3 +33,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
