--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -52,15 +52,14 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 1em;
+  margin: 0;
+  padding: 0;
 }
 
 
-.left {
-  display: flex;
-
-}
-
-.right {
+.left, .right {
   display: flex;
   gap: 1em;
+  align-items: center;
 }
+
