--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,13 +11,14 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 
 .container {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 52px;
 }
 
 /* do not edit this footer */
@@ -31,4 +32,8 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plant-info {
+  max-width: 200px;
 }
