--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -24,3 +24,22 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/* my code; */
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  padding-inline-start: 0px;
+}
